--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,7 +7,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
   </head>
-  <body style='margin: 0; background-color: #f9fdff'>
+  <body>
     <div id='root'></div>
   </body>
 </html>
