--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,8 +4,21 @@
     <title>Legislated</title>
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name='description' content='Your seat in state government' />
+    <meta name='og:url' content='https://legislated.org/' />
+    <meta name='og:type' content='website' />
+    <meta name='og:site_name' content='Legislated' />
+    <meta name='og:title' content='Legislated' />
+    <meta name='og:image' content='https://legislated.org/assets/1200x1200_logotitle-09.png' />
+    <meta name='og:description' content='Your seat in state government' />
+    <meta name='twitter:card' content='summary' />
+    <meta name='twitter:site' content='@WitnessSlipsIL' />
+    <meta name='twitter:title' content='Legislated' />
+    <meta name='twitter:description' content='Your seat in state government' />
+    <meta name='twitter:image' content='https://legislated.org/assets/1200x1200_logotitle-09.png' />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/assets/150x150_redfeather-05.png" />
   </head>
   <body>
     <div id='root'></div>
