--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,7 +4,7 @@
     <title>Legislated</title>
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name='description' content='Your seat in state government' />
+    <meta property='description' content='Your seat in state government' />
     <meta property='og:url' content='https://legislated.org/' />
     <meta property='og:type' content='website' />
     <meta property='og:site_name' content='Legislated' />
