--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,13 +4,13 @@
     <title>Legislated</title>
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property='description' content='Your seat in state government' />
+    <meta name='description' content='Your seat in state government' />
     <meta property='og:url' content='https://legislated.org/' />
     <meta property='og:type' content='website' />
     <meta property='og:site_name' content='Legislated' />
     <meta property='og:title' content='Legislated' />
     <meta property='og:image' content='https://legislated.org/assets/1200x1200_logotitle-09.png' />
-    <meta name='og:description' content='Your seat in state government' />
+    <meta property='og:description' content='Your seat in state government' />
     <meta name='twitter:card' content='summary' />
     <meta name='twitter:site' content='@WitnessSlipsIL' />
     <meta name='twitter:title' content='Legislated' />
