Simplified asset names

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,13 +9,13 @@
     <meta property='og:type' content='website' />
     <meta property='og:site_name' content='Legislated' />
     <meta property='og:title' content='Legislated' />
-    <meta property='og:image' content='https://legislated.org/assets/1200x1200_logotitle-09.png' />
+    <meta property='og:image' content='https://legislated.org/assets/logotitle.png' />
     <meta property='og:description' content='Your seat in state government' />
     <meta name='twitter:card' content='summary' />
     <meta name='twitter:site' content='@WitnessSlipsIL' />
     <meta name='twitter:title' content='Legislated' />
     <meta name='twitter:description' content='Your seat in state government' />
-    <meta name='twitter:image' content='https://legislated.org/assets/1200x1200_logotitle-09.png' />
+    <meta name='twitter:image' content='https://legislated.org/assets/logotitle.png' />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
   </head>
