--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,6 +4,18 @@
     <title>Legislated</title>
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name='description' content='Your seat in state government' />
+    <meta property='og:url' content='https://legislated.org/' />
+    <meta property='og:type' content='website' />
+    <meta property='og:site_name' content='Legislated' />
+    <meta property='og:title' content='Legislated' />
+    <meta property='og:image' content='https://legislated.org/assets/logotitle.png' />
+    <meta property='og:description' content='Your seat in state government' />
+    <meta name='twitter:card' content='summary' />
+    <meta name='twitter:site' content='@WitnessSlipsIL' />
+    <meta name='twitter:title' content='Legislated' />
+    <meta name='twitter:description' content='Your seat in state government' />
+    <meta name='twitter:image' content='https://legislated.org/assets/logotitle.png' />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
   </head>
